<resources>
    <string name="app_name">Mozio Test2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Shop</string>
    <string name="second_fragment_label">Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="pizza_image">pizza image</string>
    <string name="details">Details</string>
    <string name="reset">Reset</string>
    <string name="flavor_full">Full %1$.2f$</string>
    <string name="flavor_half">Half %1$.2f$</string>
    <string name="you_select_full_pizza">You already selected full pizza</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="line">-----------------------------------------</string>
    <string name="order_details">Order Details</string>
    <string name="details_total">Total: %1$.2f$</string>
    <string name="details_selected_flavor">%1$s (%2$s) - %3$.2f$</string>

</resources>